Bug 260885 - Konqueror no longer detects UTF-8
Summary: Konqueror no longer detects UTF-8
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 261735 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-21 15:32 UTC by Christoph Feck
Modified: 2011-03-18 02:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2010-12-21 15:32:19 UTC
I have used "Default" encoding many years, and never had problems with encoding detection. Since a recent commit, Konqueror fails to detect the encoding of the page, and I have to manually force Unicode detection.

To reproduce, visit https://bugs.kde.org/show_bug.cgi?id=260855 and watch the accented characters in the bug title.
Comment 1 Christoph Feck 2010-12-23 05:35:53 UTC
This is probably fixed (or worked around) by r1208522.
Comment 2 Tommi Tervo 2010-12-31 17:05:14 UTC
*** Bug 261735 has been marked as a duplicate of this bug. ***
Comment 3 Maksim Orlovich 2010-12-31 20:13:09 UTC
r1208522 is completely irrelevant for KHTML.... And if you're not using KHTML  you're reporting bugs in the wrong component.
Comment 4 Christoph Feck 2011-01-01 17:14:06 UTC
I don't really know the commit number that fixed it, but it works now. If you find the commit, feel free to add it to this bug.
Comment 5 Christoph Feck 2011-03-03 13:26:51 UTC
The bug is back.
Comment 6 Maksim Orlovich 2011-03-06 15:46:48 UTC
Can confirm that, actually happens on this very big tracker.
Comment 7 Maksim Orlovich 2011-03-18 02:33:09 UTC
Git commit 13770201a98d95e5d807185c80cd0bb4f31b3aa1 by Maks Orlovich.
Committed on 06/03/2011 at 16:02.
Pushed by orlovich into branch 'master'.

Fix regression in charset parsing.

Implicit LWS is permitted between tokens in key/value pairs.

BUG: 260885

M  +2    -0    kioslave/http/http.cpp     

http://commits.kde.org/kdelibs/13770201a98d95e5d807185c80cd0bb4f31b3aa1
Comment 8 Maksim Orlovich 2011-03-18 02:37:51 UTC
Git commit 0b952035a61707fb870ea7239160a57fdeac631d by Maks Orlovich.
Committed on 06/03/2011 at 16:02.
Pushed by orlovich into branch '4.6'.

Fix regression in charset parsing.

Implicit LWS is permitted between tokens in key/value pairs.

BUG: 260885

M  +2    -0    kioslave/http/http.cpp     

http://commits.kde.org/kdelibs/0b952035a61707fb870ea7239160a57fdeac631d