Fix regression in charset parsing.

Implicit LWS is permitted between tokens in key/value pairs.

BUG: 260885